# libdot

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  Makefile.in  dotprod.cpp  dotprod2.cpp  dotprod2_dd.cpp  dotprod2_vec.cpp  dotprod_comp2.cpp  dotprod_comp2_vec.cpp  dotprod_comp4.cpp  dotprod_comp4_vec.cpp  dotprod_dd.cpp  dotprod_dd_vec.cpp  dotprod_extr2.cpp  dotprod_extr2_vec.cpp  dotprod_extr4.cpp  dotprod_extr4_vec.cpp  dotprod_fma.cpp  dotprod_pw.cpp  dotprod_qd.cpp  dotprod_vec.cpp  eft.h  fpcheck.cpp  libdot.h  libdot_align.cpp  sav_dotprod2.cpp  toto  vec.h
tests/: Makefile.am  acctest.cpp  gendot.cpp  gendot.h  indivtest.cpp  mpfr_tools.cpp  mpfr_tools.h  perftest.cpp  timetest.cpp  timing.cpp  timing.h
